# limare2011-intrinsic-images

./: CMakeLists.txt  README.md  debug.h  makefile  norm.c  retinex_pde.c  retinex_pde_cli.c  retinex_pde_lib.c  retinex_pde_lib_wrapper.cpp  retinex_pde_lib_wrapper.h  retinex_pde_opencv.cpp
